create sensor history
